--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^17.0.13"
+    "@types/node": "^17.0.13",
+    "typescript": "^4.6.3"
   }
 }
